--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="http://localhost:8097"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
